# GridRush

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  README.md  answer.json  generate_puzzles.py  install.bat  install.sh  package-lock.json  package.json  question.json  run.bat  run.ps1  run.sh  temp_arrow_test.json  temp_arrow_test2.json
docs/: QUICKSTART.md
frontend/: app.js  index.html  styles.css
include/: Solver.h  bitwise_solver.h  classic_dlx_solver.h  constraints.h  log_translator.h
server/: index.js
src/: Solver.cpp  benchmark_classic.cpp  bitwise_solver.cpp  classic_dlx_solver.cpp  main.cpp
